objects/jiffle__Briefing_Center__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Breifing_Center_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Breifing Center UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Sync_Date__c</fullName>
        <label>Briefing Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipName>Briefing_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Location_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Location ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>jiffle__Event_Master__c</referenceTo>
        <relationshipName>Briefing_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Location</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Briefing Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>